force-app/main/default/objects/Question__c/fields/Question_ID__c.field-meta.xml
<CustomField>
    <fullName>Question_ID__c</fullName>
    <description>Question ID field on Question object</description>
    <externalId>true</externalId>
    <label>Question ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>