force-app/main/default/objects/Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type picklist field on question object</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Single Select</fullName>
            </value>
            <value>
                <fullName>Multiple Select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>